[Nav Experiment] Sync navigation item URL to WKWebView in edge case.

This works around a quirk of WKWebView that changes URL in between
didCommit and didFinish callback of the same WKNavigation. This fixes
DCHECK in error_try_state_machine.mm.

Bug: 869540
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I5fd9b35732a9717de47bdfb43d1e943770b2f9ee
Reviewed-on: https://chromium-review.googlesource.com/1157911
Commit-Queue: Danyao Wang <danyao@chromium.org>
Reviewed-by: Eugene But <eugenebut@chromium.org>
Cr-Commit-Position: refs/heads/master@{#580318}
Former-commit-id: 46dccb72144637b29b2b39a259f9feae8d4acfea